--- a/mouse/mouse03.html
+++ b/mouse/mouse03.html
@@ -118,7 +118,7 @@
         transform: scale(12);
     }
     
-    .infor4 {position: absolute; left: 0; bottom: 0; z-index: 1000; padding: 20px;}
+    .infor4 {position: absolute; left: 45%; bottom: 0; z-index: 1000; padding: 20px;}
     .infor4 a {color: #fff; border: 1px solid #fff; border-radius: 30px; padding: 5px 30px}
     .infor4 .modal {
         background: rgba(0,0,0,0.8);
