--- a/mouse/mouse05.html
+++ b/mouse/mouse05.html
@@ -159,10 +159,9 @@
     } 
     
     /* 모달 */
-    .infor4 {position: absolute; left: 0; bottom: 0; z-index: 1000; padding: 20px;}
+    .infor4 {position: absolute; left: 45%; bottom: 0; z-index: 1000; padding: 20px;}
     .infor4 a {color: #fff; border: 1px solid #fff; border-radius: 30px; padding: 5px 30px}
     .infor4 a.axis {
-        display: inline-block;
         color: #fff; border: 1px solid #fff;
         border-radius: 30px; padding: 5px 30px;
         /* position: absolute; left: 8vw; bottom: 1.5vh; */
