--- a/mouse/mouse07.html
+++ b/mouse/mouse07.html
@@ -100,7 +100,7 @@
         background-size: cover; /* 이게 없으면 실제 이미지 크기만큼의 영역이 생겨버린다.*/
     }
     
-    .infor4 {position: absolute; left: 0; bottom: 0; z-index: 1000; padding: 20px;}
+    .infor4 {position: absolute; left: 45%; bottom: 0; z-index: 1000; padding: 20px;}
     .infor4 a {color: #fff; border: 1px solid #fff; border-radius: 30px; padding: 5px 30px}
     .infor4 .modal {
         background: rgba(0,0,0,0.8);
