--- a/port/index3.html
+++ b/port/index3.html
@@ -64,12 +64,22 @@
 
         <div id="section2">
             <div class="section2 left-section">
-                <div class="s2-title left-title">
-                    <h2 class="ftitle">webstandard</h2>
-                    <h2 class="btitle">webstandard</h2>
+                <div class="s2-title left-title"
+                   
+                   >
+                    <h2 class="ftitle"
+                        data-940="top: 15.25vw; left: 25.604vw; transform: skew(0deg, -5deg)"
+                        data-1240="opacity: 0;"
+                        data-1540="opacity: 1; top: 1.25vw; left: 7.604vw; transform: skew(0deg, 0deg)">webstandard</h2>
+                    <h2 class="btitle"
+                        data-940="top: 15.25vw; left: 25.604vw; transform: skew(0deg, -5deg)"
+                        data-1240="opacity: 0;"
+                        data-1540="opacity: 1; top: 1.25vw; left: 7.604vw; transform: skew(0deg, 0deg)">webstandard</h2>
                 </div>
                 <div class="s2-img-wrap img-wrap">
-                    <div class="s2-img img"></div>
+                    <div class="s2-img img"
+                        data-1200="transform: scale3d(1,1,1)"
+                        data-2900="transform: scale3d(1.24115,1.24115,1)"></div>
                 </div>
                 <div class="s2-num-wrap left-num-wrap">
                     <div class="s2-num left-num">01</div>
@@ -190,11 +200,19 @@
         <div id="section3">
             <div class="section3 left-section">
                 <div class="s3-title left-title">
-                    <h2 class="ftitle">responsive</h2>
-                    <h2 class="btitle">responsive</h2>
+                    <h2 class="ftitle"
+                        data-3000="top: 15.25vw; left: 25.604vw; transform: skew(0deg, -5deg)"
+                        data-3300="opacity: 0;"
+                        data-3600="opacity: 1; top: 1.25vw; left: 7.604vw; transform: skew(0deg, 0deg)">responsive</h2>
+                    <h2 class="btitle"
+                        data-3000="top: 15.25vw; left: 25.604vw; transform: skew(0deg, -5deg)"
+                        data-3300="opacity: 0;"
+                        data-3600="opacity: 1; top: 1.25vw; left: 7.604vw; transform: skew(0deg, 0deg)">responsive</h2>
                 </div>
                 <div class="s3-img-wrap img-wrap">
-                    <div class="s3-img img"></div>
+                    <div class="s3-img img"
+                        data-3277="transform: scale3d(1,1,1)"
+                        data-4947="transform: scale3d(1.24115,1.24115,1)"></div>
                 </div>
                 <div class="s3-num-wrap left-num-wrap">
                     <div class="s3-num left-num">02</div>
@@ -312,11 +330,19 @@
         <div id="section4">
             <div class="section4 right-section">
                 <div class="s4-title right-title">
-                    <h2 class="ftitle2">nongshim</h2>
-                    <h2 class="btitle2">nongshim</h2>
+                    <h2 class="ftitle2"
+                        data-4960="top: 15.25vw; right: 25.604vw; transform: skew(0deg, -5deg)"
+                        data-5260="opacity: 0;"
+                        data-5560="opacity: 1; top: 1.25vw; right: 7.604vw; transform: skew(0deg, 0deg)">nongshim</h2>
+                    <h2 class="btitle2"
+                        data-4960="top: 15.25vw; right: 25.604vw; transform: skew(0deg, -5deg)"
+                        data-5260="opacity: 0;"
+                        data-5560="opacity: 1; top: 1.25vw; right: 7.604vw; transform: skew(0deg, 0deg)">nongshim</h2>
                 </div>
                 <div class="s4-img-wrap img-wrap2">
-                    <div class="s4-img img2"></div>
+                    <div class="s4-img img2"
+                        data-5338="transform: scale3d(1,1,1)"
+                        data-7004="transform: scale3d(1.24115,1.24115,1)"></div>
                 </div>
                 <div class="s4-num-wrap right-num-wrap">
                     <div class="s4-num right-num">03</div>
@@ -432,11 +458,19 @@
         <div id="section5">
             <div class="section5 right-section">
                 <div class="s5-title right-title">
-                    <h2 class="ftitle2">ptdime</h2>
-                    <h2 class="btitle2">ptdime</h2>
+                    <h2 class="ftitle2"
+                        data-7120="top: 15.25vw; right: 25.604vw; transform: skew(0deg, -5deg)"
+                        data-7420="opacity: 0;"
+                        data-7720="opacity: 1; top: 1.25vw; right: 7.604vw; transform: skew(0deg, 0deg)">ptdime</h2>
+                    <h2 class="btitle2"
+                        data-7120="top: 15.25vw; right: 25.604vw; transform: skew(0deg, -5deg)"
+                        data-7420="opacity: 0;"
+                        data-7720="opacity: 1; top: 1.25vw; right: 7.604vw; transform: skew(0deg, 0deg)">ptdime</h2>
                 </div>
                 <div class="s5-img-wrap img-wrap2">
-                    <div class="s5-img img2"></div>
+                    <div class="s5-img img2"
+                        data-7395="transform: scale3d(1,1,1)"
+                        data-9071="transform: scale3d(1.24115,1.24115,1)"></div>
                 </div>
                 <div class="s5-num-wrap right-num-wrap">
                     <div class="s5-num right-num">04</div>
@@ -560,38 +594,28 @@
         </div>
         <!-- //big-title -->
 
-        <div id="section6">
+        <div id="section6"
+            data-13826="background-color: rgb(30,136,299)"
+            data-14054="background-color: rgb(255,235,59)"
+            data-15230="background-color: rgb(255,235,59)"
+            data-15485="background-color: rgb(124,77,255)"
+            data-16592="background-color: rgb(124,77,255)"
+            data-16820="background-color: rgb(0,105,92)">
             <div class="section6">
                 <div class="bg-text">
                     <div class="aniText1">
-                        <p class="ani1-1">welcome &ndash; welcome &ndash; welcome &ndash; welcome &ndash; </p> 
-                        <p class="ani1-2">welcome &ndash; welcome &ndash; welcome &ndash; welcome &ndash; </p> 
+                        <p class="ani1-1">welcome &ndash; welcome &ndash; welcome &ndash; welcome &ndash; welcome &ndash; welcome &ndash; welcome &ndash; welcome &ndash; </p>
                     </div>
                     <div class="collText1">
-                        <p class="collect1-1">portfolio &ndash; portfolio &ndash; portfolio &ndash; portfolio &ndash; </p> 
-                        <p class="collect1-2">portfolio &ndash; portfolio &ndash; portfolio &ndash; portfolio &ndash; </p> 
+                        <p class="collect1-1">portfolio &ndash; portfolio &ndash; portfolio &ndash; portfolio &ndash; portfolio &ndash; portfolio &ndash; portfolio &ndash; portfolio &ndash; </p>
                     </div>
                     <div class="collText2">
-                        <p class="collect2-1">portfolio &ndash; portfolio &ndash; portfolio &ndash; portfolio &ndash; </p>
-                        <p class="collect2-2">portfolio &ndash; portfolio &ndash; portfolio &ndash; portfolio &ndash; </p>
+                        <p class="collect2-1">portfolio &ndash; portfolio &ndash; portfolio &ndash; portfolio &ndash; portfolio &ndash; portfolio &ndash; portfolio &ndash; portfolio &ndash; </p>
                     </div>
                     <div class="aniText2">
-                        <p class="ani2-1">welcome &ndash; welcome &ndash; welcome &ndash; welcome &ndash; </p>
-                        <p class="ani2-2">welcome &ndash; welcome &ndash; welcome &ndash; welcome &ndash; </p>
+                        <p class="ani2-1">welcome &ndash; welcome &ndash; welcome &ndash; welcome &ndash; welcome &ndash; welcome &ndash; welcome &ndash; welcome &ndash; </p>
                     </div>
                 </div>
-                <!-- data-0="background-color: rgb(27,27,27)"
-            data-900="background-color: rgb(27,27,27)"
-            data-901="background-color: rgb(240,183,11)"
-            data-3000="background-color: rgb(240,183,11)"
-            data-3200="background-color: rgb(0,163,49)"
-            data-4900="background-color: rgb(0,163,49)"
-            data-5200="background-color: rgb(3,52,187)"
-            data-7050="background-color: rgb(3,52,187)"
-            data-7350="background-color: rgb(187,3,178)"
-            data-10219="background-color: rgb(187,3,178)"
-            data-10220="background-color: rgb(27,27,27)"
-            data-11244="background-color: rgb(27,27,27)" -->
                 <div class="ani-box">
                     <div class="ani-wrap"
                     data-12244="left: 99.010vw"
