--- a/mouse/mouse04.html
+++ b/mouse/mouse04.html
@@ -149,7 +149,7 @@
         border-radius: 5px;
     }
     
-    .infor4 {position: absolute; left: 0; bottom: 0; z-index: 1000; padding: 20px;}
+    .infor4 {position: absolute; left: 45%; bottom: 0; z-index: 1000; padding: 20px;}
     .infor4 a {color: #fff; border: 1px solid #fff; border-radius: 30px; padding: 5px 30px}
     .infor4 .modal {
         background: rgba(0,0,0,0.8);
