--- a/port/index3.html
+++ b/port/index3.html
@@ -633,7 +633,7 @@
                         <div class="boxAll box2">
                             <div class="tribox1"></div>
                             <a class="right-code-btn" href="https://codepen.io/hyunjin22/pen/vYNLzLX" target="blank">code</a>
-                            <div class="ani-title right-ani-title">
+                            <div class="ani-title left-ani-title">
                                 <p>square</p>
                                 animation
                             </div>
@@ -772,7 +772,7 @@
                         <div class="boxAll box4">
                             <div class="tribox2"></div>
                             <a class="right-code-btn" href="https://codepen.io/hyunjin22/pen/MWaqYGg" target="blank">code</a>
-                            <div class="ani-title right-ani-title">
+                            <div class="ani-title left-ani-title">
                                 <p>step</p>
                                 animation
                             </div>
