--- a/port/index3.html
+++ b/port/index3.html
@@ -67,14 +67,8 @@
                 <div class="s2-title left-title"
                    
                    >
-                    <h2 class="ftitle"
-                        data-940="top: 15.25vw; left: 25.604vw; transform: skew(0deg, -5deg)"
-                        data-1240="opacity: 0;"
-                        data-1540="opacity: 1; top: 1.25vw; left: 7.604vw; transform: skew(0deg, 0deg)">webstandard</h2>
-                    <h2 class="btitle"
-                        data-940="top: 15.25vw; left: 25.604vw; transform: skew(0deg, -5deg)"
-                        data-1240="opacity: 0;"
-                        data-1540="opacity: 1; top: 1.25vw; left: 7.604vw; transform: skew(0deg, 0deg)">webstandard</h2>
+                    <h2 class="ftitle">webstandard</h2>
+                    <h2 class="btitle">webstandard</h2>
                 </div>
                 <div class="s2-img-wrap img-wrap">
                     <div class="s2-img img"
@@ -200,14 +194,8 @@
         <div id="section3">
             <div class="section3 left-section">
                 <div class="s3-title left-title">
-                    <h2 class="ftitle"
-                        data-3000="top: 15.25vw; left: 25.604vw; transform: skew(0deg, -5deg)"
-                        data-3300="opacity: 0;"
-                        data-3600="opacity: 1; top: 1.25vw; left: 7.604vw; transform: skew(0deg, 0deg)">responsive</h2>
-                    <h2 class="btitle"
-                        data-3000="top: 15.25vw; left: 25.604vw; transform: skew(0deg, -5deg)"
-                        data-3300="opacity: 0;"
-                        data-3600="opacity: 1; top: 1.25vw; left: 7.604vw; transform: skew(0deg, 0deg)">responsive</h2>
+                    <h2 class="ftitle">responsive</h2>
+                    <h2 class="btitle">responsive</h2>
                 </div>
                 <div class="s3-img-wrap img-wrap">
                     <div class="s3-img img"
@@ -330,14 +318,8 @@
         <div id="section4">
             <div class="section4 right-section">
                 <div class="s4-title right-title">
-                    <h2 class="ftitle2"
-                        data-4960="top: 15.25vw; right: 25.604vw; transform: skew(0deg, -5deg)"
-                        data-5260="opacity: 0;"
-                        data-5560="opacity: 1; top: 1.25vw; right: 7.604vw; transform: skew(0deg, 0deg)">nongshim</h2>
-                    <h2 class="btitle2"
-                        data-4960="top: 15.25vw; right: 25.604vw; transform: skew(0deg, -5deg)"
-                        data-5260="opacity: 0;"
-                        data-5560="opacity: 1; top: 1.25vw; right: 7.604vw; transform: skew(0deg, 0deg)">nongshim</h2>
+                    <h2 class="ftitle2">nongshim</h2>
+                    <h2 class="btitle2">nongshim</h2>
                 </div>
                 <div class="s4-img-wrap img-wrap2">
                     <div class="s4-img img2"
@@ -458,14 +440,8 @@
         <div id="section5">
             <div class="section5 right-section">
                 <div class="s5-title right-title">
-                    <h2 class="ftitle2"
-                        data-7120="top: 15.25vw; right: 25.604vw; transform: skew(0deg, -5deg)"
-                        data-7420="opacity: 0;"
-                        data-7720="opacity: 1; top: 1.25vw; right: 7.604vw; transform: skew(0deg, 0deg)">ptdime</h2>
-                    <h2 class="btitle2"
-                        data-7120="top: 15.25vw; right: 25.604vw; transform: skew(0deg, -5deg)"
-                        data-7420="opacity: 0;"
-                        data-7720="opacity: 1; top: 1.25vw; right: 7.604vw; transform: skew(0deg, 0deg)">ptdime</h2>
+                    <h2 class="ftitle2">ptdime</h2>
+                    <h2 class="btitle2">ptdime</h2>
                 </div>
                 <div class="s5-img-wrap img-wrap2">
                     <div class="s5-img img2"
