--- a/port/index3.html
+++ b/port/index3.html
@@ -64,9 +64,7 @@
 
         <div id="section2">
             <div class="section2 left-section">
-                <div class="s2-title left-title"
-                   
-                   >
+                <div class="s2-title left-title">
                     <h2 class="ftitle">webstandard</h2>
                     <h2 class="btitle">webstandard</h2>
                 </div>
