--- a/port/index3.html
+++ b/port/index3.html
@@ -29,12 +29,23 @@
                 <div class="section1"
                     data-0 = "transform: skew(0deg, 0deg); opacity: 1;"
                     data-800 = "transform: skew(0deg, 10deg); opacity: 0;">
+                    <video src="img/smoke.mp4" autoplay muted></video>
                     <div class="s1-title">
-                        <h1> 
-                            <span>you can see hj's</span><br>
-                            portpolio
-                        </h1>
-                        <p><span>Thinking</span> = Thinking + Thinking</p>
+                        <div class="smoke"> 
+                            <div class="nosmoke">you can see hj's</div>
+                            <div class="smokespan">
+                                <span class="smoke1">p</span>
+                                <span class="smoke2">o</span>
+                                <span class="smoke3">r</span>
+                                <span class="smoke4">t</span>
+                                <span class="smoke5">f</span>
+                                <span class="smoke6">o</span>
+                                <span class="smoke7">l</span>
+                                <span class="smoke8">i</span>
+                                <span class="smoke9">o</span>
+                            </div>
+                        </div>
+                        <!-- <p><span>Thinking</span> = Thinking + Thinking</p> -->
                     </div>
                     <div class="s1-desc">
                         <p>
