--- a/port/index3.html
+++ b/port/index3.html
@@ -603,7 +603,7 @@
                 </div>
                 <div class="ani-box">
                     <div class="ani-wrap"
-                    data-12244="left: 99.010vw"
+                    data-12244="left: 100vw"
                     data-18307="left: -417.344vw"
                     >
                         <div class="boxAll box1">
@@ -790,93 +790,118 @@
         </div>
         <!-- //big-title -->
 
+        <!-- re:section7 -->
         <div id="section7">
-            <div class="parallax">
-                <div class="scriptview-wrap">
-                    <div class="view-box">
-                        <iframe class="iframe" src="../script/parallax/parallax03.html" frameborder="0"></iframe>
-                    </div>
-                </div>
-                <div class="script-text">
+            <div class="section7">
+                <div class="script-text"
+                    data-20880="opacity: 0;"
+                    data-20929="opacity: 1; display: block;"
+                    data-22532="opacity: 1;"
+                    data-22572="opacity: 0;"
+                    data-24260="display: none;">
                     <h2>parallax</h2>
                     <h3>what</h3>
                     <p>
-                        Parallax는 ‘시차’ 라는 뜻으로 천문학에서 사용하는 용어입니다. 즉 멀리 있는 물체는 천천히 움직이고, 가까이 있는 물체는 빨리 움직이는 현상을 의미하며, 이 현상을 이용하면 입체감, 실체감을 높여서 보다 인상적인 디자인을 할 수 있습니다. 
+                        Parallax는 ‘시차’ 라는 뜻으로 천문학에서 사용하는 용어입니다. 즉 멀리 있는 물체는 천천히 움직이고, 가까이 있는 물체는 빨리 움직이는 현상을 의미하며, 이 현상을 이용하면 입체감, 실체감을 높여서 보다 인상적인 디자인을 할 수 있습니다.
                     </p>
                 </div>
-                <div class="script-btn">
-                    <a class="sbtn1 btnactive" href="#">01</a>
-                    <a class="sbtn2" href="#">02</a>
-                    <a class="sbtn3" href="#">03</a>
-                    <a class="sbtn4" href="#">04</a>
-                    <a class="sbtn5" href="#">05</a>
-                    <a class="sbtn6" href="#">06</a>
-                    <a class="sbtn7" href="#">07</a>
-                    <a class="sbtn8" href="#">08</a>
-                </div>
-                <div class="script-num">
-                    <span class="snum1">01</span>
-                    <span class="snum2">03</span>
-                </div>
-            </div>
-            <div class="slide">
-                <div class="scriptview-wrap">
-                    <div class="view-box">
-                        <iframe class="iframe2" src="../slider/slide01.html" frameborder="0"></iframe>
-                    </div>
-                </div>
-                <div class="script-text">
+                <div class="script-text"
+                    data-22523="opacity: 0;"
+                    data-22572="opacity: 1;"
+                    data-24172="opacity: 1;"
+                    data-24221="opacity: 0;">
                     <h2>slide</h2>
                     <h3>what</h3>
                     <p>
                         Image Slide는 웹 사이트에서 자주 사용되는 스크립트이며, slide의 ‘미끄러지다’ 라는 뜻 처럼 고정된 이미지를 미끄러지게 하여 웹 사이트에 생동감을 주며, 사용자에게 쉽게 정보를 제공할 수 있습니다. 
                     </p>
                 </div>
-                <div class="script-btn">
-                    <a class="slidebtn sbtn1 btnactive" href="#">01</a>
-                    <a class="slidebtn sbtn2" href="#">02</a>
-                    <a class="slidebtn sbtn3" href="#">03</a>
-                    <a class="slidebtn sbtn4" href="#">04</a>
-                    <a class="slidebtn sbtn5" href="#">05</a>
-                    <a class="slidebtn sbtn6" href="#">06</a>
-                    <a class="slidebtn sbtn7" href="#">07</a>
-                    <a class="slidebtn sbtn8" href="#">08</a>
-                </div>
-                <div class="script-num">
-                    <span class="snum1">02</span>
-                    <span class="snum2">03</span>
-                </div>
-            </div>
-            <div class="mouse">
-                <div class="scriptview-wrap">
-                    <div class="view-box">
-                        <iframe class="iframe3" src="../mouse/mouse01.html" frameborder="0"></iframe>
-                    </div>
-                </div>
-                <div class="script-text">
+                <div class="script-text"
+                    data-24172="opacity: 0;"
+                    data-24221="opacity: 1;">
                     <h2>mouse</h2>
                     <h3>what</h3>
                     <p>
                         Interaction은 사용자와 서비스간의 상호작용을 뜻하며, Mouse는 상호작용을 위한 중요한 수단입니다. Mouse에 다양한 효과를 주게 되면 컨텐츠에 대한 집중을 높일 수 있습니다. 
                     </p>
                 </div>
-                <div class="script-btn">
-                    <a class="mousebtn sbtn1 btnactive" href="#">01</a>
-                    <a class="mousebtn sbtn2" href="#">02</a>
-                    <a class="mousebtn sbtn3" href="#">03</a>
-                    <a class="mousebtn sbtn4" href="#">04</a>
-                    <a class="mousebtn sbtn5" href="#">05</a>
-                    <a class="mousebtn sbtn6" href="#">06</a>
-                    <a class="mousebtn sbtn7" href="#">07</a>
-                    <a class="mousebtn sbtn8" href="#">08</a>
+                <div class="script-num"
+                    data-20880="opacity: 0;"
+                    data-20929="opacity: 1;"
+                    data-22532="opacity: 1;"
+                    data-22572="opacity: 0;">
+                    <span class="snum1">01</span>
+                    <span class="snum2">03</span>
                 </div>
-                <div class="script-num">
+                <div class="script-num"
+                    data-22523="opacity: 0;"
+                    data-22572="opacity: 1;"
+                    data-24172="opacity: 1;"
+                    data-24221="opacity: 0;">
+                    <span class="snum1">02</span>
+                    <span class="snum2">03</span>
+                </div>
+                <div class="script-num"
+                    data-24172="opacity: 0;"
+                    data-24221="opacity: 1;">
                     <span class="snum1">03</span>
                     <span class="snum2">03</span>
                 </div>
+                <div class="script-All-wrp">
+                    <div class="parallax">
+                        <div class="scriptview-wrap">
+                            <div class="view-box">
+                                <iframe class="ifr1" src="../script/parallax/parallax3.html" frameborder="0"></iframe>
+                            </div>
+                        </div>
+                        <div class="script-btn">
+                            <a class="btnactive" href="#">01</a>
+                            <a href="#">02</a>
+                            <a href="#">03</a>
+                            <a href="#">04</a>
+                            <a href="#">05</a>
+                            <a href="#">06</a>
+                            <a href="#">07</a>
+                            <a href="#">08</a>
+                        </div>
+                    </div>
+                    <div class="slide">
+                        <div class="scriptview-wrap">
+                            <div class="view-box">
+                                <iframe class="ifr2" src="../slider/slide01.html" frameborder="0"></iframe>
+                            </div>
+                        </div>
+                        <div class="script-btn">
+                            <a class="slidebtn btnactive" href="#">01</a>
+                            <a class="slidebtn" href="#">02</a>
+                            <a class="slidebtn" href="#">03</a>
+                            <a class="slidebtn" href="#">04</a>
+                            <a class="slidebtn" href="#">05</a>
+                            <a class="slidebtn" href="#">06</a>
+                            <a class="slidebtn" href="#">07</a>
+                            <a class="slidebtn" href="#">08</a>
+                        </div>
+                    </div>
+                    <div class="mouse">
+                        <div class="scriptview-wrap">
+                            <div class="view-box">
+                                <iframe class="ifr3" src="../mouse/mouse01.html" frameborder="0"></iframe>
+                            </div>
+                        </div>
+                        <div class="script-btn">
+                            <a class="mousebtn btnactive" href="#">01</a>
+                            <a class="mousebtn" href="#">02</a>
+                            <a class="mousebtn" href="#">03</a>
+                            <a class="mousebtn" href="#">04</a>
+                            <a class="mousebtn" href="#">05</a>
+                            <a class="mousebtn" href="#">06</a>
+                            <a class="mousebtn" href="#">07</a>
+                            <a class="mousebtn" href="#">08</a>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
-        <!-- //section7 -->
 
         
         
