--- a/port/index3.html
+++ b/port/index3.html
@@ -102,8 +102,8 @@
                         </ul>
                     </div>
                     <div class="btn-wrap">
-                        <div class="btn btn-site"><a href="../site-webstandard/index.html" target="blank">view site</a></div>
-                        <div class="btn btn-figma"><a href="https://www.figma.com/file/knnrHvG9ZKTt33OSGKBC3h/webstandard?node-id=0%3A1" target="blank">view figma</a></div>
+                        <a href="../site-webstandard/index.html" target="blank">view site</a>
+                        <a href="https://www.figma.com/file/knnrHvG9ZKTt33OSGKBC3h/webstandard?node-id=0%3A1" target="blank">view figma</a>
                     </div>
                 </div>
                 <div class="circlebox">
@@ -229,8 +229,8 @@
                         </ul>
                     </div>
                     <div class="btn-wrap">
-                        <div class="btn btn-site"><a href="../site-responsive/index.html" target="blank">view site</a></div>
-                        <div class="btn btn-figma"><a href="https://www.figma.com/file/zOiT0jACF2pxl4Dke5GNVv/responsive?node-id=0%3A1" target="blank">view figma</a></div>
+                        <a href="../site-responsive/index.html" target="blank">view site</a>
+                        <a href="https://www.figma.com/file/zOiT0jACF2pxl4Dke5GNVv/responsive?node-id=0%3A1" target="blank">view figma</a>
                     </div>
                 </div>
                 <div class="circlebox">
@@ -351,8 +351,8 @@
                         </ul>
                     </div>
                     <div class="btn-wrap2">
-                        <div class="btn2 btn-site"><a href="../nongshim/index.html" target="blank">view site</a></div>
-                        <div class="btn2 btn-figma"><a href="https://www.figma.com/file/84c2FQQWw7z1nt1RoQ7TcM/nongshim?node-id=0%3A1" target="blank">view figma</a></div>
+                        <a href="../nongshim/index.html" target="blank">view site</a>
+                        <a href="https://www.figma.com/proto/84c2FQQWw7z1nt1RoQ7TcM/nongshim?node-id=1%3A2&viewport=3283%2C413%2C0.25&scaling=contain" target="blank">view figma</a>
                     </div>
                 </div>
                 <div class="circlebox2">
@@ -473,8 +473,8 @@
                         </ul>
                     </div>
                     <div class="btn-wrap2">
-                        <div class="btn2 btn-site"><a href="../pdtime/main.html" target="blank">view site</a></div>
-                        <div class="btn2 btn-figma"><a href="#" target="blank">view figma</a></div>
+                        <a href="../pdtime/main.html" target="blank">view site</a>
+                        <a href="#" target="blank">view figma</a>
                     </div>
                 </div>
                 <div class="circlebox2">
