--- a/port/index3.html
+++ b/port/index3.html
@@ -103,7 +103,7 @@
                     </div>
                     <div class="btn-wrap">
                         <a href="../site-webstandard/index.html" target="blank">view site</a>
-                        <a href="https://www.figma.com/file/knnrHvG9ZKTt33OSGKBC3h/webstandard?node-id=0%3A1" target="blank">view figma</a>
+                        <a href="https://www.figma.com/proto/knnrHvG9ZKTt33OSGKBC3h/webstandard?node-id=1%3A2&viewport=610%2C485%2C0.05899874493479729&scaling=contain" target="blank">view figma</a>
                     </div>
                 </div>
                 <div class="circlebox">
@@ -230,7 +230,7 @@
                     </div>
                     <div class="btn-wrap">
                         <a href="../site-responsive/index.html" target="blank">view site</a>
-                        <a href="https://www.figma.com/file/zOiT0jACF2pxl4Dke5GNVv/responsive?node-id=0%3A1" target="blank">view figma</a>
+                        <a href="https://www.figma.com/proto/zOiT0jACF2pxl4Dke5GNVv/responsive?node-id=0%3A3&viewport=610%2C485%2C0.053034573793411255&scaling=contain" target="blank">view figma</a>
                     </div>
                 </div>
                 <div class="circlebox">
