--- a/pdtime/contact.html
+++ b/pdtime/contact.html
@@ -97,12 +97,12 @@
         // Initialize and add the map
         function initMap() {
           // The location of Uluru
-          var uluru = {lat: -25.344, lng: 131.036};
+          var home = {lat: 37.356548, lng: 126.718896};
           // The map, centered at Uluru
           var map = new google.maps.Map(
-              document.getElementById('map'), {zoom: 4, center: uluru});
+              document.getElementById('map'), {zoom: 4, center: home});
           // The marker, positioned at Uluru
-          var marker = new google.maps.Marker({position: uluru, map: map});
+          var marker = new google.maps.Marker({position: home, map: map});
         }
             </script>
             <!--Load the API from the specified URL
