--- a/port/index3.html
+++ b/port/index3.html
@@ -474,7 +474,7 @@
                     </div>
                     <div class="btn-wrap2">
                         <a href="../pdtime/main.html" target="blank">view site</a>
-                        <a href="#" target="blank">view figma</a>
+                        <a href="https://www.figma.com/proto/HOzjg2D8WrXbBsgIaOSUZN/ptdime?node-id=1%3A2&viewport=1811%2C367%2C0.5&scaling=contain" target="blank">view figma</a>
                     </div>
                 </div>
                 <div class="circlebox2">
