--- a/port/index3.html
+++ b/port/index3.html
@@ -102,7 +102,7 @@
                         </ul>
                     </div>
                     <div class="btn-wrap">
-                        <a href="../site-webstandard/index.html" target="blank">view site</a>
+                        <a href="https://hyunjin912.github.io/portfolio/site-webstandard/index.html" target="blank">view site</a>
                         <a href="https://www.figma.com/proto/knnrHvG9ZKTt33OSGKBC3h/webstandard?node-id=1%3A2&viewport=610%2C485%2C0.05899874493479729&scaling=contain" target="blank">view figma</a>
                     </div>
                 </div>
@@ -229,7 +229,7 @@
                         </ul>
                     </div>
                     <div class="btn-wrap">
-                        <a href="../site-responsive/index.html" target="blank">view site</a>
+                        <a href="https://hyunjin912.github.io/portfolio/site-responsive/index.html" target="blank">view site</a>
                         <a href="https://www.figma.com/proto/zOiT0jACF2pxl4Dke5GNVv/responsive?node-id=0%3A3&viewport=610%2C485%2C0.053034573793411255&scaling=contain" target="blank">view figma</a>
                     </div>
                 </div>
@@ -351,7 +351,7 @@
                         </ul>
                     </div>
                     <div class="btn-wrap2">
-                        <a href="../nongshim/index.html" target="blank">view site</a>
+                        <a href="https://hyunjin912.github.io/portfolio/nongshim/index.html" target="blank">view site</a>
                         <a href="https://www.figma.com/proto/84c2FQQWw7z1nt1RoQ7TcM/nongshim?node-id=1%3A2&viewport=3283%2C413%2C0.25&scaling=contain" target="blank">view figma</a>
                     </div>
                 </div>
@@ -473,7 +473,7 @@
                         </ul>
                     </div>
                     <div class="btn-wrap2">
-                        <a href="../pdtime/main.html" target="blank">view site</a>
+                        <a href=https://hyunjin912.github.io/portfolio/pdtime/main.html" target="blank">view site</a>
                         <a href="https://www.figma.com/proto/HOzjg2D8WrXbBsgIaOSUZN/ptdime?node-id=1%3A2&viewport=1811%2C367%2C0.5&scaling=contain" target="blank">view figma</a>
                     </div>
                 </div>
@@ -783,10 +783,10 @@
         <div id="section7">
             <div class="section7">
                 <div class="script-text"
-                data-20880="display: none;"
-                data-20929="display: block;"
-                data-22532="display: block"
-                data-22572="display: none;">
+                    data-20880="display: none;"
+                    data-21724="display: block;"
+                    data-22532="display: block"
+                    data-23324="display: none;">
                     <h2>parallax</h2>
                     <h3>what</h3>
                     <p>
@@ -794,10 +794,10 @@
                     </p>
                 </div>
                 <div class="script-text"
-                data-22523="display: none;"
-                data-22572="display: block"
-                data-24172="display: block"
-                data-24221="display: none;">
+                    data-22523="display: none;"
+                    data-23324="display: block"
+                    data-24172="display: block"
+                    data-25224="display: none;">
                     <h2>slide</h2>
                     <h3>what</h3>
                     <p>
@@ -806,9 +806,9 @@
                 </div>
                 <div class="script-text"
                     data-24172="display: none;"
-                    data-24221="display: block;"
+                    data-25224="display: block;"
                     data-25931="display: block;"
-                    data-25980="display: none;">
+                    data-27111="display: none;">
                     <h2>mouse</h2>
                     <h3>what</h3>
                     <p>
@@ -816,26 +816,26 @@
                     </p>
                 </div>
                 <div class="script-num"
-                data-20880="display: none;"
-                data-20929="display: block;"
-                data-22532="display: block"
-                data-22572="display: none;">
+                    data-20880="display: none;"
+                    data-21724="display: block;"
+                    data-22532="display: block"
+                    data-23324="display: none;">
                     <span class="snum1">01</span>
                     <span class="snum2">03</span>
                 </div>
                 <div class="script-num"
-                data-22523="display: none;"
-                data-22572="display: block"
-                data-24172="display: block"
-                data-24221="display: none;">
+                    data-22523="display: none;"
+                    data-23324="display: block"
+                    data-24172="display: block"
+                    data-25224="display: none;">
                     <span class="snum1">02</span>
                     <span class="snum2">03</span>
                 </div>
                 <div class="script-num"
-                data-24172="display: none;"
-                data-24221="display: block;"
-                data-25931="display: block;"
-                data-25980="display: none;">
+                    data-24172="display: none;"
+                    data-25224="display: block;"
+                    data-25931="display: block;"
+                    data-27111="display: none;">
                     <span class="snum1">03</span>
                     <span class="snum2">03</span>
                 </div>
