--- a/port/index3.html
+++ b/port/index3.html
@@ -917,15 +917,15 @@
                         <div class="question">
                             Hello. What's your name?
                         </div>
-                        <input type="text" value="Name">
+                        <input type="text" placeholder="Name">
                         <div class="question">
                             How can I contact you?
                         </div>
-                        <input type="text" value="E-mail">
+                        <input type="text" placeholder="E-mail">
                         <div class="question">
                             Would you like to leave a message?
                         </div>
-                        <input type="text" value="Message">
+                        <input type="text" placeholder="Message">
                     </div>
                     <a class="contact-btn" href="#">SEND MESSAGE</a>
                 </div>
