--- a/port/index4.html
+++ b/port/index4.html
@@ -19,7 +19,19 @@
     <header id="header">
         <div class="container">
             <div class="header">
-                
+                <div class="header-title">
+                    <h1>
+                        you can see hj's<br>
+                        <span>porfolio</span>
+                    </h1>
+                </div>
+                <div class="header-desc">
+                    안녕하세요. 이현진입니다.<br>
+                    <strong>생각을 거듭할수록</strong>(<strong>Thinking</strong> = Thinking + Thinking) 한계가 없는 세상을 만드는 퍼블리셔에 빠지게됐습니다.<br>
+                    덕분에 제 자신도 마치 <strong>한계 없이 발전</strong>하는 것처럼 느껴졌습니다.<br>
+                    물론, 한계가 없으니 끝없이 노력해야하는 힘든 직업이지만, <strong>성취감</strong> 또한 <strong>무한</strong>하니 굉장히 가치있다고 생각합니다.<br>
+                    저의 생각을 거듭한 결과, <strong>지금부터 시작</strong>합니다.
+                </div>
             </div>
         </div>
     </header>
