--- a/test/3m.html
+++ b/test/3m.html
@@ -7,15 +7,21 @@
 
     <style>
         .boxwrap {
-            width: 700px;
+            width: 1400px;
             height: 200px;
             background: red;
+        }
+        .box {
+            width: 900px;
+            height: 300px;
+            background: blue;
+            font-size: 32px;
         }
     </style>
 </head>
 <body>
     <div class="boxwrap">
-        <div class="box"></div>
+        <div class="box">asdkfja;sdfjdsakfsadfsf;dadsffljkdsfads;jfadf;jkdfsd;ajfsdfksjafkkjdsa;jfksjfsadjkfk;lasdjfk</div>
     </div>
 </body>
 </html>
