--- a/port/index4.html
+++ b/port/index4.html
@@ -16,14 +16,18 @@
     <link rel="stylesheet" href="font/font.css">
 </head>
 <body>
+    <div class="cursor"></div>
+    <!-- //cursor -->
+
     <header id="header">
         <div class="container">
             <div class="header">
                 <div class="header-title">
                     <h1>
                         you can see hj's<br>
-                        <span>porfolio</span>
+                        <span>portfolio</span>
                     </h1>
+                    <h2><span>Thinking</span> = Thinking + Thinking</h2>
                 </div>
                 <div class="header-desc">
                     안녕하세요. 이현진입니다.<br>
@@ -35,11 +39,13 @@
             </div>
         </div>
     </header>
+    <!-- //header -->
 
     <!-- script -->
-    <script src="js/jquery-ui.min.js"></script>
     <script src="js/jquery.min_1.12.4.js"></script>
+    <script src="js/jquery-ui.min.js"></script>
     <script src="js/gsap.min.js"></script>
     <script src="js/prism.js"></script>
+    <script src="js/custom2.js"></script>
 </body>
 </html>
