--- a/port/index4.html
+++ b/port/index4.html
@@ -25,7 +25,7 @@
                 <div class="header-title">
                     <h1>
                         you can see hj's<br>
-                        <span>portfolio</span>
+                        <div>portfolio</div>
                     </h1>
                     <h2><span>Thinking</span> = Thinking + Thinking</h2>
                 </div>
