--- a/port/index4.html
+++ b/port/index4.html
@@ -17,6 +17,7 @@
 </head>
 <body>
     <div class="cursor"></div>
+    <div class="cursorbg"></div>
     <!-- //cursor -->
     <div id="contents">
         <header id="header">
