--- a/port/index4.html
+++ b/port/index4.html
@@ -18,6 +18,9 @@
 <body>
     <div class="cursor"></div>
     <div class="cursorbg"></div>
+    <div class="info">
+        <span class="scrollTop">0</span>
+    </div>
     <!-- //cursor -->
     <div id="contents">
         <header id="header">
@@ -44,16 +47,19 @@
         <div id="big-title">
             <div class="big-title">
                 <div>site
-                    <div class="underline"></div>
+                    <!-- <div class="underline"></div> -->
                 </div>
             </div>
             <div class="box-wrap">
-                <div class="box">1</div>
-                <div class="box">2</div>
-                <div class="box">3</div>
-                <div class="box">4</div>
-                <div class="box">5</div>
-                <div class="box">6</div>
+                <div class="box"></div>
+                <div class="box"></div>
+                <div class="box"></div>
+                <div class="box"></div>
+                <div class="box"></div>
+                <div class="box"></div>
+                <div class="box"></div>
+                <div class="box"></div>
+                <div class="box"></div>
             </div>
         </div>
         <!-- //big-title -->
@@ -73,6 +79,11 @@
     <script src="js/jquery-ui.min.js"></script>
     <script src="js/gsap.min.js"></script>
     <script src="js/prism.js"></script>
+    <script src="js/skrollr.min.js"></script>
     <script src="js/custom2.js"></script>
+    <script>
+        TextColor();
+        var s = skrollr.init();
+    </script>
 </body>
 </html>
