--- a/port/index3.html
+++ b/port/index3.html
@@ -21,43 +21,26 @@
             data-800 = "opacity: 0;"></div>
         <!-- //cursor -->
 
-        <div id="section1">
+        <header id="header">
             <div class="container">
-                <div class="section1"
-                    data-0 = "transform: skew(0deg, 0deg); opacity: 1;"
-                    data-800 = "transform: skew(0deg, 10deg); opacity: 0;">
-                    <video src="img/smoke.mp4" autoplay muted></video>
-                    <div class="s1-title">
-                        <div class="smoke"> 
-                            <div class="nosmoke">you can see hj's</div>
-                            <div class="smokespan">
-                                <span class="smoke1">p</span>
-                                <span class="smoke2">o</span>
-                                <span class="smoke3">r</span>
-                                <span class="smoke4">t</span>
-                                <span class="smoke5">f</span>
-                                <span class="smoke6">o</span>
-                                <span class="smoke7">l</span>
-                                <span class="smoke8">i</span>
-                                <span class="smoke9">o</span>
-                            </div>
+                <div class="row">
+                    <div class="header">
+                        <div class="header-title">
+                            <h1 class="main-tit"><strong class="split">You can see dreams</strong><em class="split"> in my portfolio</em></h1>
+                            <p class="sub-tit split">Thinking= Thinking + Thinking</p>
+                            <p class="desc">
+                                안녕하세요. 이현진입니다.<br>
+                                <strong>생각을 거듭할수록</strong>(<strong>Thinking</strong> = Thinking + Thinking) 한계가 없는 세상을 만드는 퍼블리셔에 빠지게됐습니다.<br>
+                                덕분에 제 자신도 마치 <strong>한계 없이 발전</strong>하는 것처럼 느껴졌습니다.<br>
+                                물론, 한계가 없으니 끝없이 노력해야하는 힘든 직업이지만, 성취감 또한 무한하니 굉장히 가치있다고 생각합니다.<br>
+                                저의 생각을 거듭한 결과, 지금부터 시작합니다.
+                            </p>
                         </div>
-                        <!-- <p><span>Thinking</span> = Thinking + Thinking</p> -->
-                    </div>
-                    <div class="s1-desc">
-                        <p>
-                            안녕하세요. 이현진입니다.<br>
-                            <strong>생각을 거듭할수록</strong>(<strong>Thinking</strong> = Thinking + Thinking) 한계가 없는 세상을 만드는 퍼블리셔에 빠지게됐습니다.<br>
-                            덕분에 제 자신도 마치 <strong>한계 없이 발전</strong>하는 것처럼 느껴졌습니다.<br>
-                            물론, 한계가 없으니 끝없이 노력해야하는 힘든 직업이지만, <strong>성취감</strong> 또한 <strong>무한</strong>하니 굉장히 가치있다고 생각합니다.<br>
-                            저의 생각을 거듭한 결과, <strong>지금부터 시작</strong>합니다.
-                        </p>
                     </div>
                 </div>
             </div>
-            <!-- //container -->
-        </div>
-        <!-- //section1 -->
+        </header>
+        <!-- //header -->
 
         <div id="big-title">
             <div class="container">
