--- a/port/index3.html
+++ b/port/index3.html
@@ -16,9 +16,9 @@
 </head>
 <body>
     <section id="contents">
-        <div class="cursor"
+        <!-- <div class="cursor"
             data-0 = "opacity: 1;"
-            data-800 = "opacity: 0;"></div>
+            data-800 = "opacity: 0;"></div> -->
         <!-- //cursor -->
 
         <header id="header">
