--- a/port/index4.html
+++ b/port/index4.html
@@ -46,9 +46,13 @@
 
         <div id="big-title">
             <div class="big-title">
-                <div>site
-                    <!-- <div class="underline"></div> -->
-                </div>
+                <svg> 
+                    <text text-anchor="middle" 
+                    alignment-baseline="middle" 
+                    transform="translate(250, 150)">
+                        site
+                    </text>
+                </svg>
             </div>
             <div class="box-wrap">
                 <div class="box"></div>
@@ -81,9 +85,9 @@
     <script src="js/prism.js"></script>
     <script src="js/skrollr.min.js"></script>
     <script src="js/custom2.js"></script>
-    <script>
+    <!-- <script>
         TextColor();
         var s = skrollr.init();
-    </script>
+    </script> -->
 </body>
 </html>
