--- a/port/index4.html
+++ b/port/index4.html
@@ -16,9 +16,7 @@
     <link rel="stylesheet" href="font/font.css">
 </head>
 <body>
-    <div class="cursor"
-        data-0="opacity: 1"
-        data-723="opacity: 0"></div>
+    
     <div class="cursorbg"></div>
     <div class="info">
         <span class="scrollTop">0</span>
@@ -26,9 +24,15 @@
     <!-- //cursor -->
     <div id="contents">
         <header id="header">
+            <!-- <div class="cursor-wrap"> -->
+                <div class="cursor"
+                data-0="opacity: 1"
+                data-650="opacity: 0"></div>
+            <!-- </div> -->
             <div class="container">
                 <div class="row">
                     <div class="header">
+                    
                         <div class="header-title">
                             <h1 class="main-tit"><strong class="split">You can see dreams</strong><em class="split"> in my portfolio</em></h1>
                             <p class="sub-tit split">Thinking= Thinking + Thinking</p>
@@ -73,18 +77,25 @@
         <section id="section1">
             <div class="sec1 left-section">
                 <div class="sec1-title left-title">
+                <!-- <div class="sec1-title left-title"
+                    data-750="left: 7.604vw;"
+                    data-1400="left: -5.604vw;"> -->
                     <h2 class="ftitle">webstandard</h2>
                     <h2 class="btitle">webstandard</h2>
                 </div>
                 <div class="sec1-img-wrap img-wrap">
                     <div class="sec1-img img"
-                        data-700="transform: scale3d(1,1,1)"
-                        data-2300="transform: scale3d(1.24998,1.24998,1);"></div>
+                        data-700="left: 0px; transform: scale3d(1,1,1)"
+                        data-2300="left: 120px; transform: scale3d(1.24998,1.24998,1);"></div>
                 </div>
-                <div class="sec1-num-wrap left-num-wrap">
+                <div class="sec1-num-wrap left-num-wrap"
+                    data-800="top: 18vw;"
+                    data-2000="top: 30vw;">
                     <div class="sec1-num left-num">01</div>
                 </div>
-                <div class="sec1-desc-wrap left-desc-wrap">
+                <div class="sec1-desc-wrap left-desc-wrap"
+                    data-1400="top: 36vw"
+                    data-2300="top: 20vw">
                     <div class="sec1-desc left-desc">
                         <ul>
                             <li class="desc-title">WEBSTANDARD</li>
