--- a/port/index4.html
+++ b/port/index4.html
@@ -111,8 +111,8 @@
                         </ul>
                     </div>
                     <div class="btn-wrap">
-                        <a href="https://hyunjin912.github.io/portfolio/site-webstandard/index.html" target="blank">view site</a>
-                        <a href="https://www.figma.com/proto/knnrHvG9ZKTt33OSGKBC3h/webstandard?node-id=1%3A2&viewport=610%2C485%2C0.05899874493479729&scaling=contain" target="blank">view figma</a>
+                        <a class="link leftBtn blank" href="#"><span>view site</span></a>
+                        <a class="link rightBtn" href="#"><span>view figma</span></a>
                     </div>
                 </div>
                 
